# agentic-rag-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  inspect_chroma.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: coordinator.py  evaluator.py  generator.py  retriever.py  schemas.py
backend/app/api/: router.py
backend/app/api/v1/: chat.py  debug.py  health.py
backend/app/core/: config.py  logging.py
backend/app/graph/: builder.py  state.py
backend/app/prompts/: templates.py
backend/app/rag/: embeddings.py  loaders.py  retriever.py  vectorstore.py
backend/app/schemas/: chat.py  debug.py  health.py
backend/app/services/: chat_service.py
backend/data/chroma/: chroma.sqlite3
backend/tests/: test_health.py
data/: README.md
docs/: README.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  ChatBubble.tsx  ChatInput.tsx  PanelCard.tsx  Sidebar.tsx  StatusIndicator.tsx  TypingIndicator.tsx
frontend/src/pages/: Agent.tsx  Dashboard.tsx
frontend/src/services/: chatService.ts  healthService.ts
frontend/src/types/: chat.ts  health.ts
frontend/src/utils/: useBackendStatus.ts  useChat.ts
