[project]
name = "agentic-rag-platform-backend"
version = "1.0.0"
description = "Backend de Agentic RAG Platform. Iteración de bootstrap de infraestructura."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "tiktoken>=0.13.0",
    "beautifulsoup4>=4.15.0",
    "langchain-cohere>=0.6.0",
    "pypdf>=6.14.2",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
